# ncnn_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  landmark.cpp
data/models/: db  landmark_96.param  lnet112.param
examples/: test_classifier.cpp  test_face.cpp  test_object.cpp
include/ncnn/: platform.h
include/win/ncnn/: platform.h
include/win/opencv2/core/: fast_math.hpp
include/win/opencv2/flann/: saving.h
lib/win/: ncnn.lib  opencv_world344.lib
models/: R50-0000.prototxt  mnet-opt.param  mobilefacenet-gnap.param  r50.param  r50.table
ncnn-20210525-full-source/cmake/: run_test.cmake
ncnn-20210525-full-source/docs/how-to-use-and-FAQ/: openmp-best-practice.md  openmp-best-practice.zh.md
ncnn-20210525-full-source/python/pybind11/tests/: requirements.txt
ncnn-20210525-full-source/scripts/win/: build_vs2017.bat
scripts/win/: build_vs2017.bat
src/: CMakeLists.txt  aligner.cpp  common.cpp  common.h  detector.cpp  detector.h  face_detect.cpp  face_detect.h  face_engine.cpp  face_engine.h  landmarker.cpp  landmarker.h  main.cpp  mobilefacenet.cpp  mobilefacenet.h  mtcnn.cpp  mtcnn.h  preprocess.cpp  preprocess.h  recognizer.h  retinaface.cpp  retinaface.h  zq_landmarker.h
src/align/: aligner.h
src/aligner/: aligner.cpp  aligner.h
src/classifier/: classifier_engine.cpp  classifier_engine.h  test_classifier.cpp
src/classifier/classifier/: classifier.h
src/classifier/classifier/mobilenet/: mobilenet.cpp  mobilenet.h
src/common/: common.cpp  common.h
src/database/: face_database.cpp  face_database.h  file_stream.cpp  file_stream.h
src/database/stream/: file_stream.h
src/detect/: detector.cpp  detector.h
src/detect/centerface/: centerface.cpp  centerface.h
src/detect/mtcnn/: mtcnn.cpp  mtcnn.h
src/detect/retinaface/: retinaface.cpp  retinaface.h
src/detecter/: detecter.h  detector.cpp
src/detecter/centerface/: centerface.h
src/detecter/mtcnn/: mtcnn.cpp  mtcnn.h
src/detecter/retinaface/: retinaface.cpp  retinaface.h
src/face/: face_engine.cpp  face_engine.h  test_face.cpp
src/face/aligner/: aligner.cpp  aligner.h
src/face/database/: face_database.cpp  face_database.h
src/face/database/stream/: file_stream.cpp
src/face/detecter/: detecter.cpp  detecter.h
src/face/detecter/anticonv/: anticonv.cpp  anticonv.h
src/face/detecter/centerface/: centerface.cpp  centerface.h
src/face/detecter/mtcnn/: mtcnn.cpp  mtcnn.h
src/face/detecter/retinaface/: retinaface.cpp  retinaface.h
src/face/landmarker/: landmarker.cpp  landmarker.h
src/face/landmarker/insightface/: insightface.cpp  insightface.h
src/face/landmarker/zqlandmarker/: zqlandmarker.cpp  zqlandmarker.h
src/face/recognizer/: recognizer.cpp  recognizer.h
src/face/recognizer/mobilefacenet/: mobilefacenet.cpp  mobilefacenet.h
src/face/tracker/: tracker.cpp  tracker.h
src/landmark/: landmarker.cpp  landmarker.h
src/landmark/zqlandmark/: zq_landmarker.cpp  zq_landmarker.h
src/landmarker/: landmarker.cpp
src/landmarker/zqlandmark/: zq_landmarker.cpp
src/models/: landmark.param  landmark_big.param
src/object/: object_engine.cpp  object_engine.h  test_object.cpp
src/object/object/: object_detecter.h
src/object/object/mobilenetssd/: mobilenetssd.cpp  mobilenetssd.h
src/recognize/: recognizer.cpp  recognizer.h
src/recognize/mobilefacenet/: mobilefacenet.cpp  mobilefacenet.h
src/recognizer/: recognizer.h
src/track/: tracker.cpp  tracker.h
src/tracker/: tracker.cpp
